--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -63,14 +63,9 @@ h1, h2, p, a, span, button {
 }
 a, i {
   cursor: pointer;
+  transition: all .2s ease-out;
   &:hover {
     color: variables.$text-color-2;
-  }
-}
-a {
-  text-decoration: underline variables.$text-color-2-transparent;
-  &:hover {
-    text-decoration-color: variables.$text-color-2;
   }
 }
 
