fix: add background color to fallback component

--- a/src/lib/styles/variables.scss
+++ b/src/lib/styles/variables.scss
@@ -1,5 +1,6 @@
 /* Root variables */
 $background-color: #040404;
+$background-color-transparent: #04040480;
 $text-color-1: #ebedf0;
 $text-color-2: #963484;
 $text-color-2-transparent: #96348400;
