--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -60,6 +60,7 @@ html {
 }
 h1, h2, p, a, span, button {
   font-family: 'Poppins', sans-serif;
+  text-shadow: 0 0 5px variables.$background-color, 0 0 5px variables.$background-color;
 }
 a, i {
   cursor: pointer;
