refactor: move layout css to css file

--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -58,6 +58,10 @@ input {
 html {
   background-color: variables.$background-color;
 }
+body {
+  margin: 8vh 0;
+  font-size: 1.3em;
+}
 h1, h2, p, a, span, button {
   font-family: 'Poppins', sans-serif;
 }
