fix: add color when hovering icons

--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -27,6 +27,9 @@ a, i {
   transition: all .2s ease-out;
 
   &:hover {
-    color: variables.$text-color-2;
+    * {
+      color: variables.$text-color-2;
+      transition: all .2s ease-out;
+    }
   }
 }
