--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -1,10 +1,10 @@
-@use 'colors';
+@use "colors";
 
-@import 'reset';
+@import "reset";
 
-@import 'selector';
-@import 'styles';
-@import 'text';
+@import "selector";
+@import "styles";
+@import "text";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:ital,wght@0,100;0,400;0,700;1,100&display=swap');
