--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -2,7 +2,7 @@ html {
   background-color: colors.$background;
 
   * {
-    font: inherit;
+    font-family: "Poppins", sans-serif;
     font-size: 100%;
     text-decoration: none;
     text-rendering: optimizeLegibility;
@@ -14,12 +14,8 @@ html {
 }
 
 body {
-  margin: 8dvh 0;
+  padding: 8dvh 0;
   font-size: 1.3em;
-}
-
-h1, h2, p, a, span, button {
-  font-family: 'Poppins', sans-serif;
 }
 
 a, i {
