feat: upgrade svelte to svelte 5

--- a/src/lib/styles/colors.scss
+++ b/src/lib/styles/colors.scss
@@ -1,6 +1,5 @@
 $background: #040404;
-$text-1: #ebedf0;
-$text-2: #963484;
-$text-2-transparent: #96348400;
-$text-3: #69cb7b;
-$text-4: #929087;
+$primary: #EBEDF0;
+$accent: #963484;
+$highlight: #69CB7B;
+$selection: #929087;
