chore: update css colors to match best practices

--- a/src/lib/styles/palette.scss
+++ b/src/lib/styles/palette.scss
@@ -1,5 +1,5 @@
 $background: #040404;
-$primary: #EBEDF0;
+$primary: #ebedf0;
 $accent: #963484;
-$highlight: #69CB7B;
+$highlight: #69cb7b;
 $selection: #929087;
