chore: fix code formatting inconsistencies

--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -33,10 +33,10 @@ html {
 }
 
 a, a * {
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 a:hover, a:hover * {
   color: palette.$accent;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
 }
