refactor: move unselectable css properties to custom class

--- a/src/lib/styles/styles.scss
+++ b/src/lib/styles/styles.scss
@@ -1,5 +1,5 @@
 @use "palette";
-@use "text";
+@use "classes";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap");
