--- a/src/lib/styles/classes.scss
+++ b/src/lib/styles/classes.scss
@@ -46,3 +46,12 @@
     color: palette.$accent;
   }
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
